# kmcuda

./: .gitignore  .travis.linux  .travis.osx  .travis.setup  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  fp_abstraction.h  kernel.cu  kmcuda.cc  kmcuda.cpp  kmcuda.h  kmeans.cu  knn.cu  metric_abstraction.h  private.h  python.cc  python.cpp  setup.py  test.py  transpose.cu  tricks.cuh  wrappers.h
doc/: Doxyfile
img/: kmeans_image.ipynb
kmcudaVS/: kmcudaVS.sln
kmcudaVS/kmcudaCUDA9.2/: kmcudaCUDA9.2.vcxproj  kmcudaCUDA9.2.vcxproj.filters
kmcudaVS/kmcudaCore/: kmcudaCore.vcxproj  kmcudaCore.vcxproj.filters
kmcudaWinVS/: kmcudaWinVS.sln
kmcudaWinVS/kmcudaCore/: kmcudaCore.vcxproj  kmcudaCore.vcxproj.filters
src/: CMakeLists.txt  fp_abstraction.h  kmcuda.cc  kmcuda.h  kmeans.cu  knn.cu  metric_abstraction.h  private.h  python.cc  r.cc  setup.py  test.R  test.py  transpose.cu  tricks.cuh  wrappers.h
src/cmake/: FindR.cmake
