cmake_minimum_required(VERSION 3.5)
project(KMCUDA)
find_package(OpenMP REQUIRED)
find_package(CUDA QUIET REQUIRED)
find_package(PythonLibs 3 REQUIRED)

#set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++11 -D_FORCE_INLINES ${OpenMP_CXX_FLAGS}")
set(SOURCE_FILES kmcuda.cpp kmcuda.h wrappers.h python.cpp kernel.cu)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  set(NVCC_FLAGS "-G -g")
endif()
CUDA_ADD_LIBRARY(KMCUDA SHARED ${SOURCE_FILES} OPTIONS -arch sm_52 ${NVCC_FLAGS})
if(PYTHONLIBS_FOUND)
  include_directories(${PYTHON_INCLUDE_DIRS})
  target_link_libraries(KMCUDA ${PYTHON_LIBRARIES})
endif()